2-computing/202-user-data/cf/stack.yaml
---
  AWSTemplateFormatVersion: "2010-09-09"
  Parameters:
    dojo:
      Type: String
      Default: 'aws-workout'
    LatestAmiId:
      Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
      Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'

  Resources:
# Give access from internet for SSH in Subnet 1
    IGW:
      Type: AWS::EC2::InternetGateway
      Properties:
        Tags:
          - Key: "Name"
            Value: "cpu-202-igw"
          - Key: "Purpose"
            Value: !Ref dojo

    IGWAttachment:
      Type: AWS::EC2::VPCGatewayAttachment
      Properties:
        InternetGatewayId: !Ref IGW
        VpcId: {"Fn::ImportValue" : "net-101-vpc-id"}

    Net108RouteTable:
      Type: AWS::EC2::RouteTable
      DependsOn: IGWAttachment
      Properties:
        VpcId: {"Fn::ImportValue" : "net-101-vpc-id"}
        Tags:
          - Key: "Name"
            Value: "cpu-202-rt"
          - Key: "Purpose"
            Value: !Ref dojo

    RouteToInternet:
      Type: AWS::EC2::Route
      DependsOn: IGW
      Properties:
         RouteTableId: !Ref Net108RouteTable
         DestinationCidrBlock: 0.0.0.0/0
         GatewayId: !Ref IGW

    RTSubnetAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        RouteTableId: !Ref Net108RouteTable
        SubnetId: {"Fn::ImportValue" : "net-102-subnet-1-id"}

    Cpu202SecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
        VpcId: {"Fn::ImportValue" : "net-101-vpc-id"}
        GroupDescription: "Security group for cpu-202 dojo"
        SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
        SecurityGroupEgress:
          - IpProtocol: -1
            FromPort: 0
            ToPort: 0
            CidrIp: 0.0.0.0/0
        Tags:
          - Key: "Name"
            Value: "cpu-202-sg"
          - Key: "Purpose"
            Value: !Ref dojo

  # Create one EC2 in each subnet
    EC2Number1:
      Type: AWS::EC2::Instance
      Properties:
        InstanceType: 't2.micro'
        KeyName: 'aws-workout-key'
        ImageId: !Ref LatestAmiId
        NetworkInterfaces:
          - AssociatePublicIpAddress: "true"
            DeviceIndex: "0"
            GroupSet:
              - !Ref Cpu202SecurityGroup
            SubnetId: { "Fn::ImportValue": "net-102-subnet-1-id" }
        "UserData": {
          "Fn::Base64": {
            "Fn::Join": ["", [
              "#!/bin/bash -ex\n",
              "sudo su\n",
              "yum update -y\n",
              "yum install -y httpd\n",
              "systemctl enable httpd\n",
              "systemctl start httpd\n",
              "echo \"Hello World from $(hostname -f)\" > /var/www/html/index.html\n",
            ]]
          }
        }

        Tags:
          - Key: "Name"
            Value: "cpu-202-ec2-1"
          - Key: "Purpose"
            Value: !Ref dojo

  Outputs:
    cpu208SecurityGroup:
      Value: !Ref Cpu202SecurityGroup
      Export:
        Name: 'cpu-208-security-group-id'
